// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolveRulers Should adjust height and width if both ruler available 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 1013,
        "width": 513,
      },
      "props": Object {
        "horizontalRuler": true,
        "verticalRuler": true,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveRulers Should adjust height and width if ruler prop available 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 1013,
        "width": 513,
      },
      "props": Object {
        "ruler": true,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveRulers Should adjust only height if vertical ruler available 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 1013,
        "width": 500,
      },
      "props": Object {
        "verticalRuler": true,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveRulers Should adjust only width if horizontal ruler available 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 1000,
        "width": 513,
      },
      "props": Object {
        "horizontalRuler": true,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveRulers Should keep page size untouched if no rulers available 1`] = `
Object {
  "children": Array [
    Object {
      "box": Object {
        "height": 1000,
        "width": 500,
      },
      "props": Object {},
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
